src/snapshots/knotty__raw_lines__tests__snapshot_opening_centered_append-2.snap
---
source: src/raw_lines.rs
expression: lines.lines
---
[
    [
        OpenedBelow,
        Line,
        Line,
        Line,
    ],
    [
        Empty,
        TransferUp,
        Empty,
        OpenedBelow,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        Line,
    ],
]
