src/snapshots/knotty__raw_lines__tests__snapshot_opening_centered_append-4.snap
---
source: src/raw_lines.rs
expression: lines.lines
---
[
    [
        OpenedBelow,
        Line,
        Line,
        Line,
        Line,
        Line,
        Line,
        Line,
    ],
    [
        Empty,
        TransferUp,
        Empty,
        OpenedBelow,
        CrossDownOver,
        ClosedBelow,
        Empty,
        TransferDown,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Empty,
        Empty,
        Empty,
        TransferDown,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        Line,
        Line,
        Line,
        Empty,
        Empty,
    ],
]
