src/snapshots/knotty__raw_lines__tests__snapshot_opening_centered_append.snap
---
source: src/raw_lines.rs
expression: lines.lines
---
[
    [
        OpenedBelow,
    ],
    [
        Empty,
    ],
    [
        Empty,
    ],
    [
        Empty,
    ],
]
