src/snapshots/knotty__raw_lines__tests__snapshot_opening_centered_raise_and_lower-2.snap
---
source: src/raw_lines.rs
expression: lines.lines
---
[
    [
        OpenedBelow,
        TransferUp,
        Empty,
        OpenedBelow,
        Line,
    ],
    [
        Empty,
        TransferUp,
        TransferUp,
        Empty,
        Line,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Line,
        ClosedBelow,
    ],
    [
        Empty,
        Empty,
        Empty,
        Line,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        Empty,
        Empty,
    ],
]
