src/snapshots/knotty__raw_lines__tests__snapshot_opening_centered_raise_and_lower.snap
---
source: src/raw_lines.rs
expression: lines.lines
---
[
    [
        OpenedBelow,
        TransferUp,
        Empty,
        OpenedBelow,
    ],
    [
        Empty,
        TransferUp,
        TransferUp,
        Empty,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        Line,
    ],
    [
        Empty,
        Empty,
        Empty,
        Line,
    ],
    [
        Empty,
        Empty,
        Empty,
        Empty,
    ],
]
