src/snapshots/knotty__raw_lines__tests__snapshot_raw_lines_append-2.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        OpenedAbove,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        OpenedBelow,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
    ],
]
