src/snapshots/knotty__raw_lines__tests__snapshot_raw_lines_append-3.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
        ClosedAbove,
        Empty,
        TransferDownFinish,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        OpenedAbove,
        ClosedBelow,
        TransferDown,
        TransferDownFinish,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        OpenedBelow,
        TransferDownStart,
        TransferDown,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        TransferDownStart,
        Empty,
        Empty,
    ],
]
