src/snapshots/knotty__raw_lines__tests__snapshot_raw_lines_append-4.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        OpenedAbove,
        Line,
        Line,
        Line,
        ClosedAbove,
        Empty,
        TransferDownFinish,
        ClosedAbove,
    ],
    [
        OpenedBelow,
        TransferUpStart,
        Empty,
        OpenedAbove,
        ClosedBelow,
        TransferDown,
        TransferDownFinish,
        ClosedBelow,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        OpenedBelow,
        TransferDownStart,
        TransferDown,
        Empty,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        TransferDownStart,
        Empty,
        Empty,
        Empty,
    ],
]
