src/snapshots/knotty__raw_lines__tests__snapshot_raw_lines_expand_contract-2.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        Line,
        Line,
        Line,
        Line,
        Line,
        Line,
        Line,
    ],
    [
        Line,
        TransferUpStart,
        Empty,
        Empty,
        ClosedAbove,
        Empty,
        TransferDownFinish,
    ],
    [
        Line,
        TransferUpStart,
        TransferUp,
        Empty,
        ClosedBelow,
        TransferDown,
        TransferDownFinish,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        TransferUpFinish,
        TransferDownStart,
        TransferDown,
        Empty,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
        TransferDownStart,
        Empty,
        Empty,
    ],
]
