src/snapshots/knotty__raw_lines__tests__snapshot_raw_lines_expand_contract.snap
---
source: src/lib.rs
expression: lines
---
[
    [
        Line,
        Line,
        Line,
        Line,
    ],
    [
        Line,
        TransferUpStart,
        Empty,
        Empty,
    ],
    [
        Line,
        TransferUpStart,
        TransferUp,
        Empty,
    ],
    [
        Empty,
        Empty,
        TransferUp,
        TransferUpFinish,
    ],
    [
        Empty,
        Empty,
        Empty,
        TransferUpFinish,
    ],
]
